# furniture_shop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  dockerfile  makefile  pyproject.toml  setup.cfg
.github/workflows/: main.yml
dockerfiles/postgres/: create-test-user-and-database.sh  dockerfile
docs/: alembic.md  ddd.md  pydantic.md  sqlalchemy.md  utils.md
docs/diagrams/: app.drawio
env/: .api.sample  .db.sample  .pgadmin.sample
migrations/: env.py
migrations/versions/: 5392a03e9f53_wef.py  7d1935c10011_.py
scripts/: install_pre_commit.sh  pre_commit.sh
scripts/hooks/: pre_commit.sh
src/: config.py  database.py  main.py  models.py  opers.py
src/api/: app.py  config.py  database.py  dependencies.py  logging_conf.py  main.py  routing.py
src/api/config/: __init__.py  app.py  base.py  build.py  ports.py
src/core/: models.py  orm.py
src/database/postgres/: config.py
src/main/: fastapi.py
src/queries/: core.py  dbapi.py  models.py  utils.py
src/shared/: injector.py  tasks.py
src/shared/application/: dto.py
src/shared/utils/: suppress_echo.py
src/utils/: annotations.py
tests/: conftest.py  test_config.py  test_database.py  test_one.py
tests/allocation/: test_orm.py
tests/allocation/domain/: test_models.py  test_services.py
tests/data/: domain.py
tests/integration/: conftest.py
tests/integration/posts/: conftest.py  test_repository.py
tests/queries/: test_core.py
tests/slow/: config.py  conftest.py
tests/utils/: test_annotations.py  test_pydantic.py  test_validators.py
(+128 files in other folders)
