[tool.poetry]
name = "furniture_shop"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
alembic = "^1.13.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.25"}
uvicorn = "^0.27.0"
asyncpg = "^0.29.0"
pytest = "^7.4.4"
coverage = "^7.4.0"
flake8 = "^7.0.0"
black = "^23.12.1"
mypy = "^1.8.0"
pytest-asyncio = "^0.23.3"
pydantic-settings = "^2.1.0"
isort = "^5.13.2"
pytest-alembic = "^0.10.7"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
